# tomegus

./: .gdbinit  .gitignore  Makefile.am  NOTES  README  TODO  channels.scm  configure.ac  guix.scm  script.scm
src/: .dir-locals  Makefile.am  fov.c  fov.h  game.c  game.h  level.c  level.h  main.c  main.h  pt_console.c  pt_console.h
tests/: Makefile.am  check_init.c
